jungle docs more precise

--- a/docs/sphinx/source/tutorials/05.InteractingWithPublicTestnet.md
+++ b/docs/sphinx/source/tutorials/05.InteractingWithPublicTestnet.md
@@ -23,15 +23,6 @@ Another problem is that you do not have full control of a public testnet (as is 
 
 EOSFactory uses the latter approach and offers a built-in mechanism for mapping random account names to fixed names used in smart-contract testing. The mapping is stored in this location: `~/eosio-wallet/accounts.json`.
 
-And this what account mapping looks like in action:
-
-```
-Restored accounts as global variables:
-account_master (zk3lmwma5fpb)
-account_alice (w3qdegfsbago)
-account_carol (dp4wrcuy3f5v)
-```
-
 Because of the above complexity we recommend sticking very strictly to the following procedure.
 
 ## Create a new account on a public testnet
@@ -90,6 +81,7 @@ Next, open the [Jungle Testnet monitor](http://dev.cryptolions.io/) in your web 
 Next, navigate back to your Python terminal and run these two commands:
 
 ```
+wallet.unlock()
 wallet.import_key(account_master)
 wallet.restore_accounts(globals())
 ```
@@ -108,13 +100,21 @@ What is happening here is the following: EOSFactory verifies that the given acco
 
 Open the `eosfactory/contracts/tic_tac_toe_jungle` folder in VS Code.
 
-First, modify line `47` inside  `src/tic_tac_toe.hpp` so that it contains the name of the account you created on the testnet in the previous step, for example: 
+First, modify line `47` inside  `src/tic_tac_toe.hpp` so that instead of the original `tic.tac.toe` account name it contains the name of the account you created on the testnet in the previous step:
+
+```
+static const account_name code_account = N(<your account name>);
+```
+
+For example: 
 
 ```
 static const account_name code_account = N(zk3lmwma5fpb);
 ```
 
 **NOTE:** This is needed as the `tic_tac_toe` smart-contract example is bound to a specific account name defined in the header file. You cannot use the default account name `tic.tac.toe`, as it cannot be created on a public testnet, so you need to replace it with your own name.
+
+Make sure you save the file after being modified.
 
 Next, navigate to the `tic_tac_toe_jungle/build` folder and run *CMake* to build the contract:
 
@@ -130,19 +130,28 @@ make
 
 ## Prepare the unit test
 
-Edit the `test/unittest1.py` file and in lines `7` & `8` enter the name and password of the wallet created in the first step, for example:
+Edit the `test/unittest1.py` file and in lines `7` & `8` enter the name and password of the wallet created in the first step:
+
+```
+wallet_name = "<your wallet name>"
+wallet_pass = "<your wallet password>"
+```
+
+For example:
 
 ```
 wallet_name = "jungle_wallet"
 wallet_pass = "PW5KDRWrMAev57rfJ8z9FXpRA1tEG4EJ6nsnpVAfYdHRe5WDMnnLz"
 ```
 
+Perform a similar amendment in the the `test/test1.py` file and make sure both files are saved after being modified.
+
 ## Run the unit test
 
-Finally, open a bash terminal, navigate to the `tic_tac_toe_jungle` folder and execute the content of the `unittest1.py ` file:
+Finally, open a bash terminal, navigate to the `tic_tac_toe_jungle/test` folder and execute the content of the `unittest1.py ` file:
 
 ```
-python3 test/unittest1.py
+python3 unittest1.py
 ```
 
 This is what the final outcome should look like:
@@ -152,7 +161,7 @@ Ran 1 test in 2.223s
 OK
 ```
 
-Please note that line `9` of the `unittest1.py ` file contains an important flag which determines whether contract deployment is included in the unit test setup phase:
+Please note that line `9` of the `unittest1.py ` file (as well as line `7` of the `test1.py ` file) contains an important flag which determines whether contract deployment is included in the unit test setup phase:
 
 ```
 deployment = True
@@ -166,3 +175,41 @@ Otherwise you'll get this error when trying to re-run the test:
 assert(not contract.deploy().error)
 ```
 Also, please note that during the initial run two additional accounts are created on the testnet. Their names are random (to ensure their uniqueness) but in the code they are referred to as `account_alice`  and `account_carol`. During subsequent runs those two accounts are re-used.
+
+You might also want to run the other (non-standard) test:
+
+```
+python3 test1.py
+```
+
+**NOTE:** If you've already run `unittest1.py ` prior to that, please remember to set the deployment flag to `False`.
+
+## Run unit tests using *CMake*
+
+You can also run both tests using the *CMake* utility. 
+
+To do that navigate to the `tic_tac_toe_jungle/build` folder and run:
+
+```
+ctest
+```
+
+This is the expected outcome:
+
+```
+Test project /mnt/d/Workspaces/EOS/eosfactory/contracts/tic_tac_toe_jungle/build
+    Start 1: test
+1/2 Test #1: test .............................   Passed    2.73 sec
+    Start 2: unittest
+2/2 Test #2: unittest .........................   Passed    5.51 sec
+
+100% tests passed, 0 tests failed out of 2
+
+Total Test time (real) =   8.25 sec
+```
+
+If you prefer more verbosity use the `-V` flag:
+
+```
+ctest -V
+```
