jungle docs more precise

--- a/docs/sphinx/source/tutorials/05.InteractingWithPublicTestnet.md
+++ b/docs/sphinx/source/tutorials/05.InteractingWithPublicTestnet.md
@@ -89,7 +89,6 @@ wallet.restore_accounts(globals())
 The outcome should look like this:
 
 ```
-'account_master' (zk3lmwma5fpb) >>> '~/eosio-wallet/accounts.json'
 Restored accounts as global variables:
 account_master (zk3lmwma5fpb)
 ```
@@ -167,7 +166,11 @@ Please note that line `9` of the `unittest1.py ` file (as well as line `7` of th
 deployment = True
 ```
 
-Therefore for a subsequent run remember to change this flag to `False`, as in EOS smart-contract deployment for a given account is allowed only once (unless the source code is changed and the contract is re-built).
+In EOS contract deployment for a given account is allowed only once (unless the source code is changed and the contract is re-built). Therefore for a subsequent run remember to change this flag to `False`:
+
+```
+deployment = False
+```
 
 Otherwise you'll get this error when trying to re-run the test:
 
