ubuntu desktop docs

--- a/docs/sphinx/source/tutorials/01.InstallingEOSFactory.md
+++ b/docs/sphinx/source/tutorials/01.InstallingEOSFactory.md
@@ -127,7 +127,7 @@ At this stage you need to source the system variables that were created during E
 * If you are on Ubuntu:
 
   ```
-  source ~/.bashrc
+  source ~/.profile
   ```
 
 * And if you are on MacOS:
