--- a/docs/sphinx/source/tutorials/01.InstallingEOSFactory.md
+++ b/docs/sphinx/source/tutorials/01.InstallingEOSFactory.md
@@ -118,13 +118,7 @@ If the build process is successful, you should see this message:
 
 At this stage you need to source the system variables that were created during EOSFactory installation. The command may differ depending on your system. 
 
-* If you are on *Windows Subsystem for Linux*:
-
-  ```
-  source ~/.profile
-  ```
-
-* If you are on Ubuntu:
+* If you are on Ubuntu or *Windows Subsystem for Linux*:
 
   ```
   source ~/.profile
@@ -136,9 +130,9 @@ At this stage you need to source the system variables that were created during E
   source ~/.bash_profile
   ```
 
-## Install Python TermColor
+## Install *termcolor*
 
-In order to make unit test ouptut more readable we recommend installing the [termcolor](https://pypi.org/project/termcolor/) extention for Python:
+In order to make unit test output more readable we recommend installing the [termcolor](https://pypi.org/project/termcolor/) extension for Python:
 
 ```
 python3 -m pip install termcolor
