--- a/docs/other/issues_1.1/#40.md
+++ b/docs/other/issues_1.1/#40.md
@@ -22,8 +22,9 @@ See tutorials:
 
 We will explain the issue better in a new edition, soon.
 
-Now, you can see new exampled and articles on this issue in the branch 'dev' of 
-the repository.
+Now, you can see new examples and articles on this issue in the branch 'dev' of 
+the repository. To get an impression of the changes, you can go <a href="https://rawgit.com/tokenika/eosfactory/dev/docs/build/html/index.html">there.</a>
+
 
 The code in the branch 'dev' is tested and operational, most often. However, note 
 that the branch 'dev' is not consistent yet. Especially, the tutorials are not
