--- a/docs/other/issues_1.1/#32.md
+++ b/docs/other/issues_1.1/#32.md
@@ -7,7 +7,7 @@ https://github.com/tokenika/eosfactory/issues/32
 Hello, I am having an issue here. I am not able to read the table data that I just inserted with my account. I am able to see it with the deployer's account, but I shouldn't have to do that, right?
 
 lottery.spec.py
-```
+```md
 cprint(""" Action contract.push_action("addgrade") """, 'magenta')
 action = contract.push_action(
             "addgrade", "[" + str(account_admin) + ", 1, 25]", account_admin)
@@ -16,7 +16,7 @@ self.assertFalse(action.error)
 t = contract.table("grade", account_admin)
 ```
 Output:
-```
+```md
 ######### 
 Create a `Wallet` object with the NODEOS wallet plugin.
 Wallet directory is /Users/markmathis/Projects/EOS/eosfactory/build/daemon/data-dir/wallet/
@@ -37,7 +37,7 @@ warning: transaction executed locally, but may not be confirmed by the network y
 }
 ```
 Lottery.cpp
-```
+```md
 void addgrade(const account_name account, uint64_t grade_num, uint64_t openings) {
  require_auth(account);
 When I query with the deployer I get the row
@@ -56,4 +56,11 @@ When I query with the deployer I get the row
 
 ## Q
 
-Please, do 
+We use your work as a benchmark for the EOSFactory. Please, see our <a href="https://github.com/jakub-zarembinski/school_lottery/tree/eosfactory-fix2">repository</a>
+that forks your one.
+
+To gain an impression about what we propose to you, please see the following 
+articles. One is about <a href="https://github.com/jakub-zarembinski/school_lottery/blob/eosfactory-fix2/README_EOSFactory_test.md">unittesting</a>, another is about <a href="https://github.com/jakub-zarembinski/school_lottery/blob/eosfactory-fix2/README_EOSFactory_debugg.md">debugging.</a>
+
+
+
