--- a/docs/sphinx/source/tutorials/02.InteractingWithEOSContractsInEOSFactory.md
+++ b/docs/sphinx/source/tutorials/02.InteractingWithEOSContractsInEOSFactory.md
@@ -16,8 +16,8 @@ Open a bash terminal (or if you are on Windows, open an Ubuntu bash terminal sup
 To start your own single-node local testnet:
 
 ```
-import node
-node.reset()
+from eosfactory import *
+reset()
 ```
 
 On MacOS the *EOSIO* process is run in the background with no visible interface. However in Ubuntu & Windows it's launched in a separate window.
@@ -25,7 +25,7 @@ On MacOS the *EOSIO* process is run in the background with no visible interface.
 To verify the *EOSIO* node is running or to get information about the current state of the testnet:
 
 ```
-node.info()
+info()
 ```
 
 ## Manage Local Testnet
@@ -33,19 +33,19 @@ node.info()
 To stop the current testnet:
 
 ```
-node.stop()
+stop()
 ```
 
 To continue running the same testnet:
 
 ```
-node.run()
+run()
 ```
 
 To stop the current testnet and start a new one:
 
 ```
-node.reset()
+reset()
 ```
 
 ## Initialize Workspace
@@ -53,56 +53,61 @@ node.reset()
 First, make sure a local testnet is running:
 
 ```
-import node
-node.reset()
+from eosfactory import *
+reset()
 ```
 
-Then you can initialize the workspace:
+Next, create a new wallet:
 
 ```
-import sess
-sess.init()
+create_wallet()
 ```
 
-The initialization process does the following things:
-
-* deploys the *Bios* contract
-* creates a reference to the default `eosio` account, which can be accessed as `sess.eosio`,
-* creates several test accounts: `alice`, `bob` & `carol`, which can be accessed as `sess.alice`, `sess.bob` & `sess.carol`.
-* creates a wallet and imports into it the keys of all the above accounts
-
-If you need to lock or unlock your wallet, use the `wallet` object to do it:
+And finally, create a master account from which other accounts can be created:
 
 ```
-sess.wallet.lock()
+create_master_account("master")
 ```
 
+As a result, a global variable called `master` (or whatever name you pass as the parameter) is created and from now on you can use it anywhere in the code, for example:
+
 ```
-sess.wallet.unlock()
+master.info()
 ```
 
-**NOTE:** You don't need to supply the password, as it's kept for your convenience by Python. Obviously, this is  only secure in a development environment.
+**NOTE:** The name `master` is just a name of a global variable, not the actual name of the account created on the blockchain.
+
+You don't need to worry about locking or unlocking the wallet, managing its password or importing private keys into it. All of this is being taken care of by EOS Factory behind the scenes.
 
 ## Create test accounts
 
-If you need additional test accounts different from the ones genereated by `sess.init()` , you can easily create them:
+If you need to create test accounts, here is how you do it:
 
 ```
-import eosf
-charlie = eosf.account(sess.eosio)
-sess.wallet.import_key(charlie)
+from eosfactory import *
+create_account("charlie", master)
 ```
 
-You can print the details of an account, for example:
+Again, a global variable, this time called `charlie`, is created and from now on you can use it anywhere in the code, for example:
 
 ```
-print(charlie.info())
+charlie.info()
 ```
 
-**NOTE:** If you don't specify the name parameter in `eosf.account()`, a random name will be applied (which is useful on a public testnet where extra restrictions apply). However if you want to assign a specific name to an account, you can still do it:
+**NOTE:** If you don't specify the `account_name` parameter in `create_account()`, a random name is applied, which is useful on a public testnet where extra restrictions apply.
+
+However, if you want to assign a specific name to an account, you can still do it, for example:
 
 ```
-charlie = eosf.account(sess.eosio, name="charlie")
+create_account("charlie2", master, account_name="charlie4eos")
+```
+
+**NOTE:** You cannot create the same account variable twice, that's why we use a different name for the variable to be created, i.e. `charlie2`.
+
+And then run the `info()` command to verify that the `charlie4eos` name is actually assigned to the account referenced by the `charlie2` variable:
+
+```
+charlie2.info()
 ```
 
 ## Create reference to the EOS Token Contract
@@ -110,35 +115,42 @@ charlie = eosf.account(sess.eosio, name="charlie")
 We assume that a local testnet is running and it has been initialized:
 
 ```
-import node, sess
-node.reset()
-sess.init()
+from eosfactory import *
+reset()
+create_wallet()
+create_master_account("master")
 ```
 
 To create a reference to an already compiled contract first create an account and import its key to a wallet:
 
 ```
-import eosf
-account = eosf.account(sess.eosio)
-sess.wallet.import_key(account)
+create_account("host", master)
 ```
 
-And then create the reference to an existing constract by supplying an account which will be holding the contract and the path to the folder where the contract is located:
+And then create the reference to an existing contract by supplying an account which will be holding the contract and the path to the folder where the contract is located:
 
 ```
-contract = eosf.Contract(account, "/path/to/your/smart-contract/folder")
+contract = Contract(host, "/path/to/your/smart-contract/folder")
 ```
 
 **NOTE:** You need to supply a valid path to the folder where your smart-contract is located, for example:
 
 ```
-contract = eosf.Contract(account, "/mnt/d/Workspaces/EOS/eos/build/contracts/eosio.token")
+contract = Contract(host, "/mnt/d/Workspaces/EOS/eos/build/contracts/eosio.token")
 ```
 
-Alternatively, supply just the name of the folder, if it can be found in a standard location, i.e. `eos/build/contracts` or `eosfactory/contracts`. This way you can have an easy access to all demo contracts that are shipped with both *EOSIO* and EOSFactory:
+Alternatively, supply just the name of the folder, if it can be found in a standard location, i.e. `eos/build/contracts` or `eosfactory/contracts`.
+
+This way you can have an easy access to all demo contracts that are shipped with both *EOSIO*, for example:
 
 ```
-contract = eosf.Contract(account, "eosio.token")
+contract = Contract(host, "eosio.token")
+```
+
+Or shipped with EOSFactory, for example:
+
+```
+contract = Contract(host, "02_eosio_token")
 ```
 
 ## Deploy the EOS Token Contract
@@ -166,29 +178,57 @@ contract.code()
 To create a new token we call the `create` action on the `eosio.token` contract:
 
 ```
-contract.push_action("create", '{"issuer":"' + str(sess.eosio) + '", "maximum_supply":"1000000000.0000 EOS", "can_freeze":0, "can_recall":0, "can_whitelist":0}')
+host.push_action(
+    "create", 
+    {
+        "issuer": master,
+        "maximum_supply": "1000000000.0000 EOS",
+        "can_freeze": "0",
+        "can_recall": "0",
+        "can_whitelist": "0"
+    }, [master, host])
 ```
 
-**NOTE:** The `push_action` method takes two arguments: the action name and its arguments in JSON format. Optionally, you can also add a third argument, i.e. the account whose permission is needed, but in this case it's not necessary, as the permission defaults to the account holding the contract.
+**NOTE:** The `push_action` method takes three arguments: the action's name, the action's arguments in JSON format and the accounts whose permission is needed, in this case `master` & `host`.
 
 **NOTE:** If you want to see the actual transaction without broadcasting it, use the `show_action` method instead of `push_action`.
+
+## Create testing accounts
+
+We'll need two accounts. To create them just run:
+
+```
+create_account("alice", master)
+create_account("carol", master)
+```
 
 ## Issue EOS Tokens
 
 Now that we have created the token, the issuer can issue new tokens to `alice`:
 
 ```
-contract.push_action("issue", '{"to":"' + str(sess.alice) + '", "quantity":"100.0000 EOS", "memo":"memo"}', sess.eosio)
+host.push_action(
+    "issue",
+    {
+        "to": alice, "quantity": "100.0000 EOS", "memo": ""
+    },
+    master)
 ```
 
-**NOTE:** In this case the permission is assigned to the default `eosio` account.
+**NOTE:** In this case the permission is assigned to the default `master` account.
 
 ## Transfer EOS Tokens
 
 Now that `alice` has tokens, we will transfer some of them to `carol`: 
 
 ```
-contract.push_action("transfer", '{"from":"' + str(sess.alice) + '", "to":"' + str(sess.carol) + '", "quantity":"25.0000 EOS", "memo":"memo"}', sess.alice)
+host.push_action(
+    "transfer",
+    {
+        "from": alice, "to": carol,
+        "quantity": "25.0000 EOS", "memo":""
+    },
+    alice)
 ```
 
 **NOTE:** As the third argument we pass the reference to the `alice` account to indicate that she is the one who authorized this action.
@@ -200,11 +240,11 @@ From the contract's ABI we know that the table keeping track of the token balanc
 Let's check the state of both accounts involved in the previous transaction:
 
 ```
-contract.table("accounts", sess.alice)
+host.table("accounts", alice)
 ```
 
 ```
-contract.table("accounts", sess.carol)
+host.table("accounts", carol)
 ```
 
 **NOTE:** The `table()` method takes two arguments: the name of the table as specified by the contract ABI and the scope within the contract in which the table is found.
