--- a/docs/sphinx/source/tutorials/02.InteractingWithEOSContractsInEOSFactory.md
+++ b/docs/sphinx/source/tutorials/02.InteractingWithEOSContractsInEOSFactory.md
@@ -193,7 +193,7 @@ host.push_action(
 
 **NOTE:** If you want to see the actual transaction without broadcasting it, use the `show_action` method instead of `push_action`.
 
-## Create testing accounts
+## Create Testing Accounts
 
 We'll need two accounts. To create them just run:
 
@@ -249,7 +249,37 @@ host.table("accounts", carol)
 
 **NOTE:** The `table()` method takes two arguments: the name of the table as specified by the contract ABI and the scope within the contract in which the table is found.
 
-## Exit Python CLI
+This is the result you should get for `alice`:
+
+```
+{
+  "rows": [{
+      "balance": "75.0000 EOS"
+    }
+  ],
+  "more": false
+}
+```
+
+And this is for `carol`:
+
+```
+{
+  "rows": [{
+      "balance": "25.0000 EOS"
+    }
+  ],
+  "more": false
+}
+```
+
+## Stop Testnet and Exit Python
+
+To stop the local testnet:
+
+```
+stop()
+```
 
 To exit Python CLI:
 
