--- a/docs/sphinx/source/tutorials/02.InteractingWithEOSContractsInEOSFactory.md
+++ b/docs/sphinx/source/tutorials/02.InteractingWithEOSContractsInEOSFactory.md
@@ -5,7 +5,7 @@ The purpose of this tutorial is to demonstrate how EOSFactory and its Python CLI
 ## Prerequisites
 
 * This tutorial assumes that you have successfully installed EOSFactory. If it's not the case, please refer to [Installing EOSFactory](01.InstallingEOSFactory.html).
-* We also assume that you are familiar with the official [EOS tutorials](https://github.com/EOSIO/eos/wiki/Tutorial-Getting-Started-With-Contracts), as they will give you a broader context and explain the rationale behind EOS smart-contracts.
+* We also assume that you are familiar with the official [EOS tutorials](https://developers.eos.io/eosio-cpp/docs/introduction-to-smart-contracts), as they will give you a broader context and explain the rationale behind EOS smart-contracts.
 
 ## Run Python CLI
 
