--- a/docs/sphinx/source/tutorials/03.BuildingAndDeployingEOSContractsInEOSFactory.md
+++ b/docs/sphinx/source/tutorials/03.BuildingAndDeployingEOSContractsInEOSFactory.md
@@ -6,7 +6,7 @@ The purpose of this tutorial is to demonstrate how you can use EOSFactory to exe
 
 * This tutorial assumes that you have successfully installed EOSFactory. If it's not the case, please refer to [Installing EOSFactory](01.InstallingEOSFactory.html).
 * We also assume that you are familiar with the material covered in [Interacting with EOS Contracts in EOSFactory](02.InteractingWithEOSContractsInEOSFactory.html).
-* Finally, we assume that you are familiar with the official [EOS Hello World tutorial](https://github.com/EOSIO).
+* Finally, we assume that you are familiar with the official [EOS Hello World tutorial](https://developers.eos.io/eosio-cpp/docs/hello-world).
 
 ## Run Python CLI in VSC
 
