--- a/docs/sphinx/source/tutorials/03.BuildingAndDeployingEOSContractsInEOSFactory.md
+++ b/docs/sphinx/source/tutorials/03.BuildingAndDeployingEOSContractsInEOSFactory.md
@@ -20,19 +20,24 @@ The prompt should change to `>>>` signifying that it's ready for Python commands
 
 ## Create a new contract from template
 
+First, import the EOSFactory library:
+
+```
+from eosfactory import *
+```
+
 To create a new contract from a pre-defined template all you need is a name for the contract and the name of the template, for example:
 
 ```
-import eosf
-contract = eosf.ContractBuilderFromTemplateCreate("hello.world", template="skeleton")
+contract = ContractBuilder(contract_workspace_from_template("hello.world", template="01_hello_world"))
 ```
 
-**NOTE:**  Do not use spaces in contract names. What is allowed are letters, numbers, underscores `_`, dots `.` and dashes `- `. Regarding the second parameter, as of now there are only two templates (`skeleton` and `eosio.token`) but there’ll be more in the future. This parameter is optional, the default value is `skeleton`.
+**NOTE:**  Do not use spaces in contract names. What is allowed are letters, numbers, underscores `_`, dots `.` and dashes `- `. Regarding the second parameter, as of now there are only two templates (`01_hello_world` and `02_eosio_token`) but there’ll be more in the future. This parameter is optional, the default value is `01_hello_world`.
 
 The above command creates a new contract. However, if you want to access an existing one, use the following syntax instead:
 
 ```
-contract = eosf.ContractBuilder("hello.world")
+contract = ContractBuilder("hello.world")
 ```
 
 ## Edit the source code
@@ -43,28 +48,29 @@ To check the directory where the contract's files are located:
 contract.path()
 ```
 
-Locate the folder containing the new contract (if you're not sure where it is, use the output produced by the `contract.path` method) and edit the `hello.world.cpp` file in your favourite text editor by commenting out line 17, i.e. `require_auth( user ) `:
+Locate the folder containing the new contract (if you're not sure where it is, use the output produced by the `contract.path` method) and edit the `hello.world.cpp` file in your favorite text editor by commenting out line `18`, i.e. `require_auth( user ) `:
 
 ```
 #include <eosiolib/eosio.hpp>
 #include <eosiolib/print.hpp>
 
 #define DEBUG
+
 #include "logger.hpp"
-#include "hello.world.hpp" 
+#include "hello.world.hpp"
 
 using namespace eosio;
 
 class hello : public eosio::contract {
   public:
-      using contract::contract; 
+    using contract::contract;
 
-      /// @abi action 
-      void hi( account_name user ) {
-        logger_info( "user: ", name{user} );
-        //require_auth( user );
-        print( "Hello, ", name{user} );
-      }
+    /// @abi action
+    void hi( account_name user ) {
+      logger_info( "debug user name: ", name{user} );
+      //require_auth( user );
+      print( "Hello, ", name{user} );
+    }
 };
 
 EOSIO_ABI( hello, (hi) )
@@ -76,11 +82,11 @@ EOSIO_ABI( hello, (hi) )
 You can generate ABI and the web assembly code separately:
 
 ```
-temp = contract.build_abi()
+contract.build_abi()
 ```
 
 ```
-temp = contract.build_wast()
+contract.build_wast()
 ```
 
 Or you can generate both at the same time:
@@ -89,36 +95,32 @@ Or you can generate both at the same time:
 contract.build()
 ```
 
-**NOTE:** The `build_abi()`  and `build()` methods are relying on the *EOSIO* ABI compiler which has an experimental status in the *EOSIO* repository. Thus the ABI output might be different than expected. For the time being we recommend using the `build_wast()` method only and creating the ABI file manually.
-
 ## Deploy the contract
 
 First, start the testnet and initialize the workspace:
 
 ```
-import node, sess
-node.reset()
-sess.init()
+reset()
+create_wallet()
+create_master_account("master")
 ```
 
 Then create an account which will be holding the contract:
 
 ```
-import eosf
-account = eosf.account(sess.eosio)
-sess.wallet.import_key(account)
+create_account("host", master)
 ```
 
 Next, let's redefine the contract, so that it's associated with the above account and thus becomes deployable:
 
 ```
-contract = eosf.Contract(account, contract.path())
+contract = Contract(host, contract.path())
 ```
 
 Or you can use the contract name explicitly:
 
 ```
-contract = eosf.Contract(account, "hello.world")
+contract = Contract(host, "hello.world")
 ```
 
 And now we can deploy the contract:
@@ -129,42 +131,54 @@ contract.deploy()
 
 ## Test the contract
 
+First, let's create a couple of testing accounts:
+
+```
+create_account("alice", master)
+create_account("carol", master)
+```
+
 You can play with the contract by sending it actions with different arguments:
 
 ```
-contract.push_action("hi", '{"user":"' + str(sess.alice) + '"}', sess.alice, output=True)
+contract.push_action("hi", {"user":alice}, alice)
 ```
 
 ```
-contract.push_action("hi", '{"user":"' + str(sess.carol) + '"}', sess.alice, output=True)
+contract.push_action("hi", {"user":carol}, carol)
+```
+
+```
+contract.push_action("hi", {"user":alice}, carol)
+```
+
+```
+contract.push_action("hi", {"user":carol}, alice)
 ```
 
 All the above variations should work, as the contract allows anyone to authorize it.
 
-**NOTE:** When the `output` flag in the `push_action()` method is set to `True`, the output from the contract is being displayed in the console, for example:
+**NOTE:** Among other things, the console displays a debugger output, for example:
 
 ```
-INFO user: alice @ 17:24:7 hello.world55.cpp[16](hi)
-Hello, alice
+INFO debug user name: alice @ 12:26:05 hello.world.cpp[17](hi)
 ```
 
-If you want the output stream produced by `nodeos` to be displayed instead, set this flag to `False` and then you should see an output similar to this:
+This is the result of a `logger_info` clause  in the `hello.world.cpp` file (line `17`):
 
 ```
-w3qdegfsbago <= w3qdegfsbago::hi {"user":"carol"}
-executed transaction: 8c3cf0b611d0d8387ae337c8b...
-warning: transaction executed locally, but may not be confirmed by the network yet
+logger_info( "debug user name: ", name{user} );
 ```
 
 ## Modify the code, re-compile & re-deploy
 
-And now let's modify the `hi` method by uncommenting line 17, so that that contract authenticates the user before further execution:
+And now let's modify the `hi` method by uncommenting line `18`, so that that contract authenticates the user before further execution:
 
 ```
 void hi( account_name user ) {
-	logger_info( "user: ", name{user} );
-	require_auth( user );
-	print( "Hello, ", name{user} );
+  logger_info( "debug user name: ", name{user} );
+  require_auth( user );
+  print( "Hello, ", name{user} );
 }
 ```
 
@@ -183,17 +197,18 @@ contract.deploy()
 Now, if we attempt to mismatch the user and the authority, the contract will throw an error:
 
 ```
-contract.push_action("hi", '{"user":"' + str(sess.carol) + '"}', sess.alice, output=True)
+contract.push_action("hi", {"user":alice}, carol)
 ```
 
 ```
-Error 3090004: missing required authority
+Error 3090004: Missing required authority
+Ensure that you have the related authority inside your transaction!
 ```
 
 But if we use the appropriate authority, there should no error:
 
 ```
-contract.push_action("hi", '{"user":"' + str(sess.carol) + '"}', sess.carol, output=True)
+contract.push_action("hi", {"user":alice}, alice)
 ```
 
 ## Clean up
@@ -209,7 +224,7 @@ contract.delete()
 To stop the testnet:
 
 ```
-node.stop()
+stop()
 ```
 
 To exit Python CLI:
