--- a/docs/sphinx/source/tutorials/01.InstallingEOSFactory.md
+++ b/docs/sphinx/source/tutorials/01.InstallingEOSFactory.md
@@ -1,16 +1,16 @@
-# Installing EOSFactory
+# Installing *EOSFactory*
 
-The purpose of this tutorial is to demonstrate how to install EOSFactory on any operating system, including Ubuntu, MacOS and Windows.
+The purpose of this tutorial is to demonstrate how to install *EOSFactory* on any operating system, including Ubuntu, MacOS and Windows.
 
-We've tested EOSFactory on the following platforms:
+We've tested *EOSFactory* on the following platforms:
 
 - Ubuntu 18.04 (Bionic)
 - MacOS 10.13 (High Sierra)
 - Windows 10 (version 1803)
 
-**NOTE:** EOSFactory is now compatible with the latest release of *EOSIO*, tagged as [v1.2.0](https://github.com/EOSIO/eos/releases/tag/v1.2.0) (or higher), and from now on we expect it to be fully compatible with any subsequent *EOSIO* release.
+**NOTE:** *EOSFactory* is now compatible with the latest release of *EOSIO*, tagged as [v1.2.0](https://github.com/EOSIO/eos/releases/tag/v1.2.0) (or higher), and from now on we expect it to be fully compatible with any subsequent *EOSIO* release.
 
-**NOTE:** EOSFactory requires *EOSIO* to be compiled from the source code, i.e. not deployed in Docker.
+**NOTE:** *EOSFactory* requires *EOSIO* to be compiled from the source code, i.e. not deployed in Docker.
 
 ## Prerequisites for Ubuntu & MacOS
 
@@ -25,9 +25,9 @@ We've tested EOSFactory on the following platforms:
 - The only option you have regarding *EOSIO* installation is building it in the Ubuntu 18.04 bash (supplied by WSL), as it cannot be compiled directly on a Windows machine. What we recommend is clone the *EOSIO* source code in Windows and keep it in the Windows file structure, yet build it in WSL, taking advantage of the fact that the entire Windows file structure is fully accessible in WSL.
 - And finally, we assume you have [Python 3.5](https://www.python.org/download/releases/3.0/) available in your WSL, but this condition is likely to be already satisfied, as WSL ships with Python 3.5 by default.
 
-## Build EOSFactory on Ubuntu & MacOS
+## Build on Ubuntu & MacOS
 
-Clone EOSFactory source code from the repository:
+Clone *EOSFactory* source code from the repository:
 
 ```
 git clone https://github.com/tokenika/eosfactory.git
@@ -56,15 +56,15 @@ In our case the *EOSIO* location is `~/Workspaces/EOS/eos`, and the workspace lo
 ./build.sh -e ~/Workspaces/EOS/eos -w ~/Workspaces/EOS/contracts
 ```
 
-## Build EOSFactory on Windows
+## Build on Windows
 
-Clone EOSFactory source code from the repository:
+Clone *EOSFactory* source code from the repository:
 
 ```
 git clone https://github.com/tokenika/eosfactory.git
 ```
 
-**NOTE:** We recommend keeping EOSFactory in the Windows file structure, not WSL.
+**NOTE:** We recommend keeping *EOSFactory* in the Windows file structure, not WSL.
 
 Open a WSL bash terminal and navigate to the `eosfactory` folder:
 
@@ -116,7 +116,7 @@ If the build process is successful, you should see this message:
         |______\____/|_____/ |_|/_/    \_\_____|  |_|  \____/|_|  \_\ |_|  
 ```
 
-At this stage you need to source the system variables that were created during EOSFactory installation. The command may differ depending on your system. 
+At this stage you need to source the system variables that were created during *EOSFactory* installation. The command may differ depending on your system. 
 
 * If you are on Ubuntu or *Windows Subsystem for Linux*:
 
@@ -130,7 +130,7 @@ At this stage you need to source the system variables that were created during E
   source ~/.bash_profile
   ```
 
-**NOTE:** If you have *Visual Studio Code* installed on your machine, make sure it's shut down (or restart it completely after installing EOSFactory). Otherwise those system variables will not be visible to VSC and some *CMake*-based tasks executed in VSC might fail.
+**NOTE:** If you have *Visual Studio Code* installed on your machine, make sure it's shut down (or restart it completely after installing *EOSFactory*). Otherwise those system variables will not be visible to VSC and some *CMake*-based tasks executed in VSC might fail.
 
 ## Install *termcolor*
 
@@ -146,7 +146,7 @@ python3 -m pip install termcolor
 sudo apt install python3-pip
 ```
 
-## Test EOSFactory
+## Test the build
 
 Now let's verify that EOSFactory works and is properly hooked up to *EOSIO*.
 
@@ -184,9 +184,9 @@ If the test fails due to the `ModuleNotFoundError` error, make sure that after b
 
 If the test fails while executing `reset() ` with the `string indices must be integers` error, make sure you have EOSIO [v1.2.0](https://github.com/EOSIO/eos/releases/tag/v1.2.0) (or higher) installed. Also, make sure no other instance of `nodeos` is running on your machine.
 
-## Subsequent EOSFactory builds
+## Subsequent builds
 
-If you want to upgrade to the latest version of EOSFactory:
+If you want to upgrade to the latest version of *EOSFactory*:
 
 ```
 cd eosfactory
@@ -199,13 +199,13 @@ And then just run:
 ./build.sh
 ```
 
-**NOTE:** After the initial successful installation, unless the path to your *EOSIO* source code and/or your workspace directory has changed, you don't need to supply them when doing subsequent EOSFactory builds, as those paths are already stored in your system variables. If you do need to supply those parameters, use this syntax:
+**NOTE:** After the initial successful installation, unless the path to your *EOSIO* source code and/or your workspace directory has changed, you don't need to supply them when doing subsequent *EOSFactory* builds, as those paths are already stored in your system variables. If you do need to supply those parameters, use this syntax:
 
 ```
 ./build.sh -e /path/to/your/local/EOSIO/repository -w /path/to/your/local/workspace
 ```
 
-If you want to rebuild EOSFactory from scratch, apply the `-r` option:
+If you want to rebuild *EOSFactory* from scratch, apply the `-r` option:
 
 ```
 ./build.sh -r
