--- a/docs/sphinx/source/tutorials/03.BuildingAndDeployingEOSContractsInEOSFactory.md
+++ b/docs/sphinx/source/tutorials/03.BuildingAndDeployingEOSContractsInEOSFactory.md
@@ -1,10 +1,10 @@
-# Building and Deploying EOS Contracts using EOSFactory
+# Building and Deploying EOS Contracts using *EOSFactory*
 
-The purpose of this tutorial is to demonstrate how you can use EOSFactory to execute the simplest development cycle: create a new contract, edit the code, build the contract, deploy it and interact with it.
+The purpose of this tutorial is to demonstrate how you can use *EOSFactory* to execute the simplest development cycle: create a new contract, edit the code, build the contract, deploy it and interact with it.
 
 ## Prerequisites
 
-* This tutorial assumes that you have successfully installed EOSFactory. If it's not the case, please refer to [Installing EOSFactory](01.InstallingEOSFactory.html).
+* This tutorial assumes that you have successfully installed *EOSFactory*. If it's not the case, please refer to [Installing EOSFactory](01.InstallingEOSFactory.html).
 * We also assume that you are familiar with the material covered in [Interacting with EOS Contracts in EOSFactory](02.InteractingWithEOSContractsInEOSFactory.html).
 * Finally, we assume that you are familiar with the official [EOS Hello World tutorial](https://developers.eos.io/eosio-cpp/docs/hello-world).
 
@@ -20,7 +20,7 @@ The prompt should change to `>>>` signifying that it's ready for Python commands
 
 ## Create a new contract from template
 
-First, import the EOSFactory library:
+First, import the *EOSFactory* library:
 
 ```
 from eosfactory import *
