--- a/docs/sphinx/source/tutorials/05.InteractingWithPublicTestnet.md
+++ b/docs/sphinx/source/tutorials/05.InteractingWithPublicTestnet.md
@@ -1,10 +1,10 @@
 # Interacting with Public Testnet
 
-The purpose of this tutorial is to demonstrate how EOSFactory can be used to deploy and test EOS smart-contracts on a public testnet, e.g. [Jungle Testnet](http://dev.remote_testnet.io).
+The purpose of this tutorial is to demonstrate how *EOSFactory* can be used to deploy and test EOS smart-contracts on a public testnet, e.g. [Jungle Testnet](http://dev.remote_testnet.io).
 
 ## Prerequisites
 
-- This tutorial assumes that you have successfully installed EOSFactory. If it's not the case, please refer to [Installing EOSFactory](01.InstallingEOSFactory.html).
+- This tutorial assumes that you have successfully installed *EOSFactory*. If it's not the case, please refer to [Installing EOSFactory](01.InstallingEOSFactory.html).
 
 - We assume that you are familiar with the material covered in [Interacting with EOS Contracts in EOSFactory](02.InteractingWithEOSContractsInEOSFactory.html) and [Building & Deploying EOS Contracts using EOSFactory](03.BuildingAndDeployingEOSContractsInEOSFactory.html).
 
@@ -21,7 +21,7 @@ To be able to create a new account on a public testnet you need an account name 
 
 Another problem is that you do not have full control of a public testnet (as is the case with a local private testnet), you cannot reset it any time you want and thus each time you use a public testnet for your smart-contract testing you need to either create a new set of accounts (which is ineffective and time consuming) or you need to carefully recycle the same set of accounts (each having a unique random name).
 
-EOSFactory uses the latter approach and offers a built-in mechanism for mapping random account names to fixed names used in smart-contract testing. The mapping is stored in this location: `~/eosio-wallet/accounts.json`.
+*EOSFactory* uses the latter approach and offers a built-in mechanism for mapping random account names to fixed names used in smart-contract testing. The mapping is stored in this location: `~/eosio-wallet/accounts.json`.
 
 Because of the above complexity we recommend sticking very strictly to the following procedure.
 
@@ -94,7 +94,7 @@ Restored accounts as global variables:
 account_master (zk3lmwma5fpb)
 ```
 
-What is happening here is the following: EOSFactory verifies that the given account exists on the public testnet and associates its random name (in this case `zk3lmwma5fpb`) with a variable name (in this case `account_master`).
+What is happening here is the following: *EOSFactory* verifies that the given account exists on the public testnet and associates its random name (in this case `zk3lmwma5fpb`) with a variable name (in this case `account_master`).
 
 ## Build the smart-contract
 
