--- a/docs/sphinx/source/tutorials/02.InteractingWithEOSContractsInEOSFactory.md
+++ b/docs/sphinx/source/tutorials/02.InteractingWithEOSContractsInEOSFactory.md
@@ -1,10 +1,10 @@
-# Interacting with EOS Contracts in EOSFactory 
+# Interacting with EOS Contracts in *EOSFactory*
 
-The purpose of this tutorial is to demonstrate how EOSFactory and its Python CLI can be used to make interacting with EOS easy & intuitive.
+The purpose of this tutorial is to demonstrate how *EOSFactory* and its Python CLI can be used to make interacting with EOS easy & intuitive.
 
 ## Prerequisites
 
-* This tutorial assumes that you have successfully installed EOSFactory. If it's not the case, please refer to [Installing EOSFactory](01.InstallingEOSFactory.html).
+* This tutorial assumes that you have successfully installed *EOSFactory*. If it's not the case, please refer to [Installing EOSFactory](01.InstallingEOSFactory.html).
 * We also assume that you are familiar with the official [EOS tutorials](https://developers.eos.io/eosio-cpp/docs/introduction-to-smart-contracts), as they will give you a broader context and explain the rationale behind EOS smart-contracts.
 
 ## Run Python CLI
@@ -147,7 +147,7 @@ This way you can have an easy access to all demo contracts that are shipped with
 contract = Contract(host, "eosio.token")
 ```
 
-Or shipped with EOSFactory, for example:
+Or shipped with *EOSFactory*, for example:
 
 ```
 contract = Contract(host, "02_eosio_token")
