--- a/docs/sphinx/source/tutorials/04.WorkingWithEOSContractsUsingEOSFactoryInVSC.md
+++ b/docs/sphinx/source/tutorials/04.WorkingWithEOSContractsUsingEOSFactoryInVSC.md
@@ -1,12 +1,12 @@
-# Working with EOS Contracts using EOSFactory in *Visual Studio Code*
+# Working with EOS Contracts using *EOSFactory* in *Visual Studio Code*
 
-The purpose of this tutorial is to demonstrate how EOSFactory can be combined with [Visual Studio Code](https://code.visualstudio.com/) in order to streamline the process of working with EOS smart-contracts.
+The purpose of this tutorial is to demonstrate how *EOSFactory* can be combined with [Visual Studio Code](https://code.visualstudio.com/) in order to streamline the process of working with EOS smart-contracts.
 
 ## Prerequisites
 
-- This tutorial assumes that you have successfully installed EOSFactory. If it's not the case, please refer to [Installing EOSFactory](01.InstallingEOSFactory.html).
+- This tutorial assumes that you have successfully installed *EOSFactory*. If it's not the case, please refer to [Installing *EOSFactory*](01.InstallingEOSFactory.html).
 
-- We assume that you are familiar with the material covered in [Interacting with EOS Contracts in EOSFactory](02.InteractingWithEOSContractsInEOSFactory.html).
+- We assume that you are familiar with the material covered in [Interacting with EOS Contracts in *EOSFactory*](02.InteractingWithEOSContractsInEOSFactory.html).
 
 - We also assume you have [Visual Studio Code](https://code.visualstudio.com/) installed. If you are on Windows and run VSC for the first time, in order to get access to *Windows Subsystem for Linux* bash terminal inside VSC, navigate to `Preferences -> Settings` and overwrite the default configuration for the `terminal.integrated.shell.windows` option:
 
@@ -27,13 +27,13 @@ cd eosfactory
 And then run the following command:
 
 ```
-python3 ./pyteos/eosf.py contract.name skeleton
+python3 ./pyteos/eosf.py contract.name 01_hello_world
 ```
-**NOTE:** If you are on Windows and have not restarted your WSL bash terminal after EOSFactory installation,  you'll need to do so before you execute this command (if you are using WSL bash terminal inside *Visual Studio Code*, restart your VSC instead).
+**NOTE:** If you are on Windows and have not restarted your WSL bash terminal after *EOSFactory* installation, you'll need to do so before you execute this command (if you are using WSL bash terminal inside *Visual Studio Code*, restart your VSC instead).
 
 The first parameter (in our case `contract.name`) is the name of your contract. It can be any name you want, provided there are no spaces in it. Letters, numbers, underscores `_`, dots `.` and dashes `-` are allowed.
 
-The second parameter (in our case `skeleton`) denotes the template from which the new contract will be created. As of now there are only two templates (`skeleton` and `eosio.token`) but there'll be more in the future. This parameter is optional, the default value is `skeleton`.
+The second parameter (in our case `01_hello_world`) denotes the template from which the new contract will be created. As of now there are only two templates (`01_hello_world` and `02_eosio_token`) but there'll be more in the future. This parameter is optional, the default value is `01_hello_world`.
 
 If the above command is successful, it will launch a new instance of VSC and open a newly created VSC project with the following file structure:
 
@@ -43,7 +43,7 @@ What you get is a complete smart-contract workspace with clear separation betwee
 
 ## Use *CMake* in *Visual Studio Code*
 
-With EOSFactory you can use [CMake](https://cmake.org/) routines to compile, build and unit test a contract. 
+With *EOSFactory* you can use [CMake](https://cmake.org/) routines to compile, build and unit test a contract. 
 
 First open a bash terminal inside VSC (navigate to `View -> Integrated Terminal`), and switch to the `build` folder:
 
@@ -92,9 +92,9 @@ make
 The output should look like this:
 
 ```
-# ABI: /mnt/d/Workspaces/EOS/contracts/hellox/src/../build/contract.name.abi
+Scanning dependencies of target abi
 Built target abi
-# WAST: /mnt/d/Workspaces/EOS/contracts/hellox/src/../build/contract.name.wast
+Scanning dependencies of target wast
 Built target wast
 ```
 
@@ -123,19 +123,18 @@ ctest -R ^test$
 The outcome of the unit test (in the non-verbose mode) should look like this:
 
 ```
-Test project /mnt/d/Workspaces/EOS/contracts/hello.tokenika/build
-
+Test project /mnt/d/Workspaces/EOS/contracts/contract.name/build
     Start 1: test
-1/2 Test #1: test .............................   Passed    5.12 sec
+1/2 Test #1: test .............................   Passed    9.96 sec
     Start 2: unittest
-2/2 Test #2: unittest .........................   Passed    6.58 sec
+2/2 Test #2: unittest .........................   Passed    9.94 sec
 
 100% tests passed, 0 tests failed out of 2
 
-Total Test time (real) =  11.71 sec
+Total Test time (real) =  19.92 sec
 ```
 
-**NOTE:** As you've probably noticed, we have two types of unit tests: the standard ones (named *unittest1*, *unittest2*, etc) and ad-hoc ones (named *test1*, *test2*, etc). The reason for this duality is this: we find it useful to have standard unit tests to prove that things work as expected, and ad-hoc tests to investigate bugs and generally monitor the inner workings of a smart-contract. EOSFactory supports both, so you can choose whatever suits your needs.
+**NOTE:** As you might have noticed, there are two types of unit tests: the standard ones (named *unittest1*, *unittest2*, etc) and ad-hoc ones (named *test1*, *test2*, etc). The reason for this duality is this: we find it useful to have standard unit tests to prove that things work as expected, and ad-hoc tests to investigate bugs and generally monitor the inner workings of a smart-contract. *EOSFactory* supports both, so you can choose whatever suits your needs.
 
 ## Use automated tasks in *Visual Studio Code*
 
@@ -161,7 +160,7 @@ To run standardized unit tests navigate to `Tasks -> Unittest`:
 
 ![unittest](./images/unittest.png)
 
-You can further speed up your developement cycle by creating key bindings for those tasks, for example:
+You can further speed up your development cycle by creating key bindings for those tasks, for example:
 ```
     {
         "key": "ctrl+shift+c",
@@ -208,21 +207,21 @@ You can also make use of VSC [IntelliSense](https://code.visualstudio.com/docs/e
 
 ## Debug with smart loggers
 
-As EOSFactory gets upgraded, it will include further libraries that enhance the process of smart-contract development. Here we present one of such features in action: the logging tool. It's quite important, as using loggers is actually the only way to debug smart contracts.
+As *EOSFactory* gets upgraded, it will include further libraries that enhance the process of smart-contract development. Here we present one of such features in action: the logging tool. It's quite important, as using loggers is actually the only way to debug smart contracts.
 
-You might have noticed the `logger.hpp` header file in the `src` directory. And if you have applied the `skeleton` template when creating your VSC project, you'll also notice the following line in the `contract.name.cpp` file:
+You might have noticed the `logger.hpp` header file in the `src` directory. And if you have applied the `01_hello_world` template when creating your VSC project, you'll also notice the following line in the `contract.name.cpp` file:
 
 ```
-logger_info( "user: ", name{user} );
+logger_info( "debug user name: ", name{user} );
 ```
 
 The effect of the above code entry is the following output in test results:
 
 ```
-INFO user: carol @ 8:53:50 contract.name.cpp[16](hi)
+INFO debug user name: carol @ 8:53:50 contract.name.cpp[17](hi)
 ```
 
-A similar example can be found in the `eosio.token` template:
+A similar example can be found in the `02_eosio_token` template:
 
 ```
 logger_info("quantity.amount: ", quantity.amount);
@@ -231,9 +230,9 @@ logger_info("quantity.amount: ", quantity.amount);
 The effect of the above code entry is the following output in test results:
 
 ```
-INFO quantity.amount: 1000000 @ 8:43:8 contract.name.cpp[54](issue)
+INFO quantity.amount: 250000 @ 13:29:17 contract.name.cpp[88](transfer)
 ```
 
-Thus the logger utility offers you much more than just a way of monitoring the value of a variable. What you also get is the method name, the file name & line number where this logger event occured.
+Thus the logger utility offers you much more than just a way of monitoring the value of a variable. What you also get is the method name, the file name & line number where this logger event occurred.
 
 **NOTE:** If you run your tests using *CMake*, you'll need to apply the verbose mode to be able to see the logger output.
