--- a/docs/sphinx/source/tutorials/04.WorkingWithEOSContractsUsingEOSFactoryInVSC.md
+++ b/docs/sphinx/source/tutorials/04.WorkingWithEOSContractsUsingEOSFactoryInVSC.md
@@ -233,6 +233,14 @@ The effect of the above code entry is the following output in test results:
 INFO quantity.amount: 250000 @ 13:29:17 contract.name.cpp[88](transfer)
 ```
 
-Thus the logger utility offers you much more than just a way of monitoring the value of a variable. What you also get is the method name, the file name & line number where this logger event occurred.
+Thus the logger utility offers you much more than just a way of monitoring the value of a variable. What you also get is the method name, the file name and the line number where this logger event occurred.
 
-**NOTE:** If you run your tests using *CMake*, you'll need to apply the verbose mode to be able to see the logger output.
+**NOTE:** For the logger output to be visible in the console, make sure that your unit test contains the `Verbosity.DEBUG` flag as part of the `Logger.verbosity` options, for example:
+
+```
+Logger.verbosity = [Verbosity.INFO, Verbosity.OUT, Verbosity.DEBUG]
+```
+
+In our examples logger verbosity is defined in the top section of the file, just below the import statements.
+
+Also, if you run your tests using *CMake*, apart from that you'll need to apply the verbose mode `-V` to be able to see the full logger output.
