main import moved to header

--- a/docs/sphinx/source/tutorials/02.InteractingWithEOSContractsInEOSFactory.md
+++ b/docs/sphinx/source/tutorials/02.InteractingWithEOSContractsInEOSFactory.md
@@ -9,14 +9,23 @@ The purpose of this tutorial is to demonstrate how *EOSFactory* and its Python C
 
 ## Run Python CLI
 
-Open a bash terminal (or if you are on Windows, open an Ubuntu bash terminal supplied by *Windows Subsystem for Linux*) and type `python3` to run the Python CLI. The prompt should change to `>>>` signifying that it's ready for Python commands.
+Open a bash terminal (or if you are on Windows, open an Ubuntu bash terminal supplied by *Windows Subsystem for Linux*) and run Python CLI:
+
+```
+python3
+```
+
+Once in the Python shell, import the *EOSFactory* library:
+
+```
+from eosfactory import *
+```
 
 ## Start Local Testnet
 
 To start your own single-node local testnet:
 
 ```
-from eosfactory import *
 reset()
 ```
 
@@ -53,7 +62,6 @@ reset()
 First, make sure a local testnet is running:
 
 ```
-from eosfactory import *
 reset()
 ```
 
@@ -84,7 +92,6 @@ You don't need to worry about locking or unlocking the wallet, managing its pass
 If you need to create test accounts, here is how you do it:
 
 ```
-from eosfactory import *
 create_account("charlie", master)
 ```
 
@@ -112,28 +119,21 @@ charlie2.info()
 
 ## Create reference to the EOS Token Contract
 
-We assume that a local testnet is running and it has been initialized:
+We assume that a local testnet is running and initialized:
 
 ```
-from eosfactory import *
 reset()
 create_wallet()
 create_master_account("master")
 ```
 
-To create a reference to an already compiled contract first create an account and import its key to a wallet:
+To create a reference to an already existing contract, first create an account which will host the contract:
 
 ```
 create_account("host", master)
 ```
 
-And then create the reference to an existing contract by supplying an account which will be holding the contract and the path to the folder where the contract is located:
-
-```
-contract = Contract(host, "/path/to/your/smart-contract/folder")
-```
-
-**NOTE:** You need to supply a valid path to the folder where your smart-contract is located, for example:
+And then create a reference to the contract by supplying the host account and the path to the folder where the contract is located, for example:
 
 ```
 contract = Contract(host, "/mnt/d/Workspaces/EOS/eos/build/contracts/eosio.token")
@@ -191,7 +191,19 @@ host.push_action(
 
 **NOTE:** The `push_action` method takes three arguments: the action's name, the action's arguments in JSON format and the accounts whose permission is needed, in this case `master` & `host`.
 
-**NOTE:** If you want to see the actual transaction without broadcasting it, use the `show_action` method instead of `push_action`.
+**NOTE:** If you want to see the actual transaction without broadcasting it, use the `show_action` method instead of `push_action`, for example:
+
+```
+host.show_action(
+    "create", 
+    {
+        "issuer": master,
+        "maximum_supply": "1000000000.0000 EOS",
+        "can_freeze": "0",
+        "can_recall": "0",
+        "can_whitelist": "0"
+    }, [master, host])
+```
 
 ## Create Testing Accounts
 
