--- a/docs/sphinx/source/tutorials/03.BuildingAndDeployingEOSContractsInEOSFactory.md
+++ b/docs/sphinx/source/tutorials/03.BuildingAndDeployingEOSContractsInEOSFactory.md
@@ -16,15 +16,13 @@ Open a bash terminal and run Python CLI:
 python3
 ```
 
-The prompt should change to `>>>` signifying that it's ready for Python commands.
-
-## Create a new contract from template
-
-First, import the *EOSFactory* library:
+Once in the Python shell, import the *EOSFactory* library:
 
 ```
 from eosfactory import *
 ```
+
+## Create a new contract from template
 
 To create a new contract from a pre-defined template all you need is a name for the contract and the name of the template, for example:
 
