--- a/docs/sphinx/source/tutorials/05.InteractingWithPublicTestnet.md
+++ b/docs/sphinx/source/tutorials/05.InteractingWithPublicTestnet.md
@@ -33,7 +33,11 @@ Open a bash terminal and run Python CLI:
 python3
 ```
 
-The prompt should change to `>>>` signifying that it's ready for Python commands.
+Once in the Python shell, import the *EOSFactory* library:
+
+```
+from eosfactory import *
+```
 
 Then run the following set of commands.
 
