cases code review

--- a/docs/sphinx/source/tutorials/04.WorkingWithEOSContractsUsingEOSFactoryInVSC.md
+++ b/docs/sphinx/source/tutorials/04.WorkingWithEOSContractsUsingEOSFactoryInVSC.md
@@ -136,6 +136,16 @@ Total Test time (real) =  19.92 sec
 
 **NOTE:** As you might have noticed, there are two types of unit tests: the standard ones (named *unittest1*, *unittest2*, etc) and ad-hoc ones (named *test1*, *test2*, etc). The reason for this duality is this: we find it useful to have standard unit tests to prove that things work as expected, and ad-hoc tests to investigate bugs and generally monitor the inner workings of a smart-contract. *EOSFactory* supports both, so you can choose whatever suits your needs.
 
+Also, please note that an alternative way to run the tests is to invoke them as a Python executable file, for example:
+
+```
+python3 test/test1.py
+```
+
+```
+python3 test/unittest1.py
+```
+
 ## Use automated tasks in *Visual Studio Code*
 
 Running VSC automated tasks is an alternative to using *CMake* routines described in the previous section.
