set_nodeos_address -> configure_testnet

--- a/docs/sphinx/source/tutorials/05.InteractingWithPublicTestnet.md
+++ b/docs/sphinx/source/tutorials/05.InteractingWithPublicTestnet.md
@@ -43,7 +43,7 @@ Then run the following set of commands.
 
 ```
 import setup, eosf
-setup.set_nodeos_address("88.99.97.30:38888")
+setup.configure_testnet("88.99.97.30:38888")
 eosf.kill_keosd()
 eosf.clear_account_mapp([])
 wallet = eosf.Wallet("jungle_wallet")
