create workspace utility

--- a/docs/sphinx/source/tutorials/04.WorkingWithEOSContractsUsingEOSFactoryInVSC.md
+++ b/docs/sphinx/source/tutorials/04.WorkingWithEOSContractsUsingEOSFactoryInVSC.md
@@ -27,7 +27,7 @@ cd eosfactory
 And then run the following command:
 
 ```
-python3 ./pyteos/eosf.py contract.name 01_hello_world
+python3 ./utils/create_workspace.py contract.name 01_hello_world
 ```
 **NOTE:** If you are on Windows and have not restarted your WSL bash terminal after *EOSFactory* installation, you'll need to do so before you execute this command (if you are using WSL bash terminal inside *Visual Studio Code*, restart your VSC instead).
 
@@ -35,7 +35,7 @@ The first parameter (in our case `contract.name`) is the name of your contract. 
 
 The second parameter (in our case `01_hello_world`) denotes the template from which the new contract will be created. As of now there are only two templates (`01_hello_world` and `02_eosio_token`) but there'll be more in the future. This parameter is optional, the default value is `01_hello_world`.
 
-If the above command is successful, it will launch a new instance of VSC and open a newly created VSC project with the following file structure:
+When you open the newly created project with VSC, you'll see the following file structure:
 
 ![file_structure](./images/file_structure.png)
 
