tasks in more details

--- a/docs/sphinx/source/tutorials/04.WorkingWithEOSContractsUsingEOSFactoryInVSC.md
+++ b/docs/sphinx/source/tutorials/04.WorkingWithEOSContractsUsingEOSFactoryInVSC.md
@@ -39,7 +39,17 @@ When you open the newly created project with VSC, you'll see the following file 
 
 ![file_structure](./images/file_structure.png)
 
-What you get is a complete smart-contract workspace with clear separation between smart-contract source code, build output files and unit tests. Everything is set up and ready to be built and unit tested.
+What you get is a complete smart-contract workspace with clear separation between smart-contract source code, build output files and unit tests. Everything is set up and ready to be built and unit tested:
+
+- `src` directory, the `cpp` and `hpp` files are there.
+- `test` directory, test scripts are there.
+- `resources` directory, everything that does not fit to the previous two
+  places goes there. It may contain the Ricardian contract files.
+- `.vscode` directory that contains *IntelliSense* definitions, task 
+  definitions, etc.
+- `CMakeLists.txt` file, CMake definitions.
+
+**NOTE:** You are free to change the literals, e.g. you can change the name of `test1` to some other name, but if you do so you'll also have to update both the `CMakeLists.txt` and `.vscode/tasks.json` files.
 
 ## Use *CMake* in *Visual Studio Code*
 
@@ -154,17 +164,37 @@ Also, by using automated tasks you can choose whether you just want to compile t
 
 The advantage of using the `CLANG` compiler (as opposed to the `WASM` compiler) is that it runs faster and does not involve the linking process. Thus most of the errors in a smart-contract's code can be spotted automatically by `CLANG`. 
 
+To access automated task navigate to the `Tasks` top menu option:
+
+- `Build` results in building the contract, with the `ABI` and `WAST`
+  files going to the `build` directory.
+- `Compile` results in compilation of the contract, without building
+  (neither `ABI` nor `WAST` are produced), but code errors, if any,
+  are listed.
+- `Test` executes the `test1.py` script.
+- `Unittest` executes the `unittest1.py` script.
+
+- `EOSIO API` opens the [EOSIO documentation](https://developers.eos.io/eosio-cpp/reference).
+
+#### Compile
+
 To have your code compiled by the `CLANG` compiler navigate to `Tasks -> Compile`:
 
 ![compile](./images/compile.png)
+
+#### Build
 
 To have your code built by the `WASM` compiler navigate to `Tasks -> Build`:
 
 ![build](./images/build.png)
 
+#### Test
+
 To run ad-hoc unit tests navigate to `Tasks -> Test`:
 
 ![test](./images/test.png)
+
+#### Unit test
 
 To run standardized unit tests navigate to `Tasks -> Unittest`:
 
