cleanup after merge

--- a/docs/sphinx/source/tutorials/04.WorkingWithEOSContractsUsingEOSFactoryInVSC.md
+++ b/docs/sphinx/source/tutorials/04.WorkingWithEOSContractsUsingEOSFactoryInVSC.md
@@ -239,7 +239,7 @@ Or if you are on MacOS:
 
 ## Use *IntelliSense* in *Visual Studio Code*
 
-You can also make use of VSC [IntelliSense](https://code.visualstudio.com/docs/editor/intellisense) feature.
+You can also make use of VSC [IntelliSense](https://code.visualstudio.com/docs/editor/intellisense) feature. Among other things, it allows you to inspect the context of any code element, including its definition and declaration.
 
 ![intelisense](./images/intelisense.png)
 
