--- a/docs/sphinx/source/tutorials/03.BuildingAndDeployingEOSContractsInEOSFactory.md
+++ b/docs/sphinx/source/tutorials/03.BuildingAndDeployingEOSContractsInEOSFactory.md
@@ -30,7 +30,7 @@ To create a new contract from a pre-defined template all you need is a name for 
 contract = ContractBuilder(contract_workspace_from_template("hello.world", template="01_hello_world"))
 ```
 
-**NOTE:**  Do not use spaces in contract names. What is allowed are letters, numbers, underscores `_`, dots `.` and dashes `- `. Regarding the second parameter, as of now there are only two templates (`01_hello_world` and `02_eosio_token`) but there’ll be more in the future. This parameter is optional, the default value is `01_hello_world`.
+**NOTE:**  Do not use spaces in contract names. What is allowed are letters, numbers, underscores `_`, dots `.` and dashes `- `. Regarding the second parameter, as of now there are only three templates (`01_hello_world`, `02_eosio_token` and `03_tic_tac_toe`) but there’ll be more in the future. This parameter is optional, the default value is `01_hello_world`.
 
 The above command creates a new contract. However, if you want to access an existing one, use the following syntax instead:
 
